<resources>
    <string name="app_name">ShopHelper</string>
    <string name="add_order">Add order</string>
    <string name="show_orders">Show orders</string>
    <string name="finished">Finished Orders</string>
    <string name="unfinished">Unfinished Orders</string>
    <string name="all">All Orders</string>
    <string name="add_address">Dodaj Adres</string>
    <string name="description">Opis</string>
    <string name="numberOfLanding">Numer listu</string>
    <string name="add_name">Dodaj nazwę</string>
    <string name="name">Nazwa</string>
    <string name="add_description">Dodaj opis</string>
    <string name="add_number_of_landing">Dodaj numer listu przewozowego</string>
    <string name="quantity_item">Liczba przedmiotów</string>
    <string name="send">Paczka wysłana</string>
    <string name="save">ZAPISZ</string>
    <string name="cancel">ANULUJ</string>
    <string name="allOrders">WSZYSTKIE</string>
    <string name="sentOrders">WYSŁANE</string>
    <string name="notSent">NIE WYSŁANE</string>
    <string name="no_barcode_found">Brak kodu</string>
    <string name="no">Nie</string>
    <string name="yes">Tak</string>
    <string name="delete_order">Usuwanie zamówienia</string>
    <string name="delete_order_question">Czy usunąć zamówienie od: </string>
</resources>
