<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp">

        <TextView
            android:id="@+id/name"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="12sp"
            app:layout_widthPercent="30%"
            android:layout_width="wrap_content" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_marginTop="32dp"
            android:textSize="12sp"
            android:text="@string/add_address"
            app:layout_widthPercent="30%" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/address"
            android:layout_marginTop="32dp"
            android:textSize="12sp"
            android:text="@string/description"
            app:layout_widthPercent="30%" />

        <TextView
            android:id="@+id/numberOfLanding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_marginTop="32dp"
            android:textSize="12sp"
            android:text="@string/numberOfLanding"
            app:layout_widthPercent="30%" />

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/name"
            android:layout_toRightOf="@id/name"
            android:textSize="10sp"
            android:hint="@string/add_name" />

        <EditText
            android:id="@+id/address_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/address"
            android:layout_toRightOf="@id/address"
            android:textSize="10sp"
            android:hint="@string/add_address" />

        <EditText
            android:id="@+id/description_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/description"
            android:layout_toRightOf="@id/description"
            android:textSize="10sp"
            android:hint="@string/add_description" />


        <EditText
            android:id="@+id/numberOfLanding_edit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/numberOfLanding"
            android:layout_toRightOf="@id/numberOfLanding"
            android:hint="@string/add_number_of_landing"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/additional_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/numberOfLanding_edit"
            android:layout_marginTop="32dp"
            android:textSize="12sp"
            android:text="@string/quantity_item" />

        <TextView
            android:id="@+id/additional_items_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/numberOfLanding_edit"
            android:layout_marginTop="32dp"
            android:textSize="12sp"
            android:text="0" />


        <SeekBar
            android:id="@+id/quantity_items_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/additional_items_counter"
            android:layout_marginTop="12dp"
            android:max="100"
            android:progress="0" />

        <TextView
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantity_items_seekbar"
            android:layout_marginTop="32dp"
            android:textSize="12sp"
            android:text="@string/send"
            app:layout_widthPercent="30%" />

        <Switch
            android:id="@+id/send_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/send"
           />

        <Button
            android:id="@+id/scanButton"
            android:layout_width="48dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_barcode"
            android:elevation="0dp"
            android:layout_above="@+id/additional_items_counter"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />


    </android.support.percent.PercentRelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp">

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/save"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@id/save"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>
