<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:id="@+id/relativeLayout">

        <TextView
            android:id="@+id/allOrders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/allOrders"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sentOrders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/sentOrders"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/notSentOrders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/notSent"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/show_orders_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/relativeLayout" />

</RelativeLayout>